# URL_shortener

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  LICENSE  conftest.py  docker-compose.yml  env-sample  pyproject.toml
base/: models.py  urls.py  views.py
base/migrations/: 0001_initial.py
static/css/: main.css
templates/base/: index.html  main.html  shortner.html
tests/: test_inicio.py
urlshortener/: settings.py  urls.py  utils.py
