[tool.poetry]
name = "url-shortener"
version = "0.1.0"
description = "To shorter links"
authors = ["eduardovale76 <eduardovale76@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
