[tool.poetry]
name = "url-shortener"
version = "0.1.0"
description = "To shorter links"
authors = ["eduardovale76 <eduardovale76@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1"
pytest = "^7.1.2"
black = "^22.6.0"
isort = "^5.10.1"
pre-commit = "^2.20.0"
python-decouple = "^3.6"
dj-database-url = "^1.0.0"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120 # override black's default line-length
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | venv
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
# make it compatible with black
profile = "black" 